// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="details__header"
>
  <h2
    className="details__title"
  >
    Title
  </h2>
</div>
`;

exports[`should render correctly with documents 1`] = `
<div
  className="details__header"
>
  <h2
    className="details__title"
  >
    Title
  </h2>
  <div
    documents={
      Array [
        Object {
          "download_url": "path/to/file",
          "template_file": "foo.pdf",
          "template_name": "foo",
        },
      ]
    }
  >
    DownloadButtons
  </div>
</div>
`;
